--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,247 @@
 body{
-    background-color: hsla(0, 4%, 77%, 0.894);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+nav{
+    position: fixed;
+    background-color: hsl(241, 88%, 20%);
+    height: 80px;
+    width: 100%;
+}
+
+#logo{
+    color: hsl(0, 0%, 100%);
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 80px;
+    font-weight: bold;
+}
+
+nav ul, a{
+    padding: 0;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#heading{
-    font-size: 2em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-#container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid hsl(229, 83%, 11%);
-    border-radius: 25px;
-    padding: 30px;
-    background-color: whitesmoke;
-}
-
-#display{
-    font-size: 5rem;
-    font-family: monospace;
-    font-weight: bold;
-    color: hsla(0, 5%, 26%, 0.863);
-    text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.829);
-    margin-bottom: 25px;
-}
-
-#controls button{
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin: 5px;
-    min-width: 125px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    color: white;
-    transition: background-color 0.5s ease;
-}
-
-#startBtn{
-    background-color: hsla(120, 100%, 25%, 0.811);
-}
-
-#startBtn:hover{
-    background-color: hsla(120, 100%, 15%, 0.811);
-}
-
-#stopBtn{
-    background-color: hsla(0, 98%, 50%, 0.906);
-}
-
-#stopBtn:hover{
-    background-color: hsla(0, 98%, 40%, 0.906);
-}
-
-#resetBtn{
-    background-color: hsla(242, 98%, 50%, 0.811);
-}
-
-#resetBtn:hover{
-    background-color: hsla(242, 98%, 30%, 0.811);
-}
-
-a{
-    font-size: 1.5em;
     text-decoration: none;
-    margin: 10px;
+    list-style: none;
+    box-sizing: border-box;
 }
+
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 10px;
+}
+
+nav ul li a{
+    color: hsl(240, 100%, 100%);
+    font-size: 20px;
+    text-transform: uppercase;
+    padding: 7px 10px;
+    border-radius: 5px;
+}
+
+a.active, a:hover{
+    background-color: hsl(240, 100%, 100%);
+    color: hsl(241, 88%, 20%);
+    transition: .5s;
+}
+
+.checkBtn{
+    font-size: 30px;
+    color: hsl(0, 0%, 100%);
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+@media(max-width: 850px){
+    #logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 15px;
+    }
+}
+
+@media(max-width: 750px){
+    .checkBtn{
+        display: block ;
+    }
+
+    nav ul{
+        position: fixed;
+        width: 350px;
+        height: 100vh;
+        background-color: hsl(0, 0%, 30%);
+        top: 80px;
+        left: -100%;
+        text-align: left;
+        transition: all .5s;
+    }
+
+    nav ul li{
+        display: block;
+        margin-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 20px;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+    a:hover{
+        color: hsl(241, 88%, 20%);
+        background: none;
+    }
+
+   
+}
+
+#welcomeSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: hsl(247, 74%, 82%);
+}
+#welcome{
+    font-size: 50px;
+    font-weight: bolder;
+    text-shadow: 5px 5px 3px hsl(241, 88%, 20%);
+}
+
+#myDisc{
+    margin: 20px;
+    border-radius: 10px;
+    width: 80%;
+    height: 30vh;
+    background-color: azure;
+    text-align: center;
+    padding: 50px 0;
+    box-shadow: 5px 5px 5px hsl(241, 88%, 20%);
+}
+
+@media(max-width: 750px){
+    #welcome{
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    #closing{
+        font-size: 10px;
+    }
+}
+
+#footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: normal;
+}
+footer{
+    margin: 50px;
+}
+
+#closing{
+    font-size: 2rem;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+@media(max-width: 750px){
+    #closing{
+        margin-top: 30px;
+        font-size: 1.5em;
+    }
+}
+
+.fa-facebook{
+    color: #1454d4;
+}
+
+.fa-instagram{
+    color: hsl(340, 75%, 54%);
+}
+
+.fa-twitter{
+    color: hsl(203, 89%, 53%);
+}
+
+.fa-youtube{
+    color: hsl(0, 100%, 50%);
+}
+
+/*projects css*/
+
+.projects-section {
+    text-align: center;
+    padding: 100px 10px;
+    background-color: hsl(247, 74%, 82%);
+  }
+  
+  .projects-section-header {
+    margin: 50px;
+    font-size: 50px;
+    font-weight: bolder;
+    text-shadow: 5px 5px 3px hsl(241, 88%, 20%);
+ }
+  
+  @media (max-width: 1000px) {
+    .projects-section-header {
+      font-size: 20px;
+      padding: 20px 0 0 0;
+    }
+  }
+  
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 20px;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  
+  @media (max-width: 750px) {
+    .projects-section {
+      padding:  30px;
+    }
+  
+    .projects-grid {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  .project {
+    box-shadow: 5px 5px 5px hsl(241, 88%, 20%);
+    border-radius: 10px;
+  }
+
+  .project-image {
+    height: calc(100% - 6.8rem);
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .project-title {
+    font-size: 2rem;
+    padding: 10px 5px;
+  }
